# macroflow

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml
_workspace/: 00_input.md  01_style_review.md  02_security_review.md  03_performance_review.md  04_architecture_review.md  05_review_summary.md
docs/: dev-log.md
docs/design-docs/: core-beliefs.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-28-backlog.md  mvp-phase1.md
docs/product-specs/: drag-drop-sequencer.md  json-format-spec.md  macro-player.md  macro-recorder.md  scripting-engine.md
src/macroflow/: __init__.py  macro_file.py  main.py  player.py  recorder.py  script_engine.py  types.py
src/macroflow/ui/: __init__.py  editor.py  editor_dialogs.py  editor_history.py  editor_insertions.py  editor_keys.py  editor_rows.py  editor_summary.py  editor_table.py  favorites.py  main_window.py  overlay.py  sequencer.py
src/macroflow/win32/: __init__.py  dpi.py  hooks.py  mock.py  sendinput.py
tests/: conftest.py  test_editor_context_menu.py  test_editor_dialogs.py  test_editor_f6_capture.py  test_editor_history.py  test_editor_insertions.py  test_editor_keys.py  test_editor_relative_time.py  test_editor_remark.py  test_editor_rows.py  test_editor_summary.py  test_editor_table.py  test_favorites_search.py  test_macro_file.py  test_player.py  test_recorder.py  test_sequencer_backlog.py  test_ui_package_imports.py  test_version.py
